# codescan

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
codescan/: __init__.py  __main__.py  cli.py  config.py  gui.py  gui_presenters.py  mcp_server.py  models.py  report.py  rule_manager.py  scanner.py  semgrep_converter.py  styles.py  utils.py  vulndb.py
codescan/ai/: __init__.py  chains.py  prompts.py  providers.py  schemas.py  service.py  workflow.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codex.md  community.md  example-output.md  good-first-issues.md  mcp.md  rule_server_api.md  rules_guide.md  skill.md  technical_doc.md
examples/: sample-mcp-result.json
examples/demo-vulnerable-app/: README.md  app.py
examples/demo-vulnerable-app/templates/: profile.html
skills/codescan-review/: SKILL.md
skills/codescan-review/agents/: openai.yaml
tests/: test_cli_entrypoint.py  test_community_files.py  test_docs_examples.py  test_example_outputs.py  test_gui_presenters.py  test_issue_model_compat.py  test_mcp_server.py  test_packaging_metadata.py  test_report_generators.py  test_scanner_ai_integration.py  test_skill_metadata.py  test_vulndb_defaults.py
tests/ai/: test_provider_factory.py  test_workflow.py
