[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codescan"
version = "0.1.0"
description = "AI-assisted code security scanner with LangChain and LangGraph runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HeJiguang" }
]
dependencies = [
  "PyQt5>=5.15.0",
  "PyQtChart>=5.15.0",
  "requests>=2.26.0",
  "pyyaml>=6.0.0",
  "openai>=0.27.0",
  "tenacity>=8.0.1",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langgraph>=0.2.0",
  "pydantic>=2.0.0",
  "colorama>=0.4.4",
  "gitpython>=3.1.24",
  "rich>=13.3.0",
  "tqdm>=4.65.0",
  "markdown>=3.4.0",
  "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.0"
]

[project.scripts]
codescan = "codescan.__main__:main"

[tool.setuptools.packages.find]
include = ["codescan*"]
